--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ DISCORD_DEPLOYMENTS_FAILED_CHANNEL=''
 
 STORMKIT_APP_SECRET=""
 STORMKIT_URL=''
-STORMKIT_API_URL='http://api.stormkit:8888'
+STORMKIT_API_URL='http://api.localhost:8888'
 STORMKIT_APP_URL='https://localhost:5400'
-STORMKIT_DEV_URL='http://stormkit:8888'
+STORMKIT_DEV_URL='http://localhost:8888'
 STORMKIT_WEBHOOKS_URL=''
 STORMKIT_DEPLOYER_EXECUTABLE=''
 STORMKIT_DEPLOYER_DIR=''
@@ -22,7 +22,7 @@ STORMKIT_ACME_EMAIL=''
 
 VITE_PORT=8080
 VITE_API_DOMAIN=/api
-VITE_API_PROXY_DOMAIN=http://stormkit:8888/
+VITE_API_PROXY_DOMAIN=http://api.localhost:8888/
 VITE_NODE_ENV=development
 
 PROMETHEUS_METRICS=false
